Added classes for simplify the api managment

--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -11,6 +11,14 @@ dependencies {
 
     compile group: 'redis.clients', name: 'jedis', version: '3.1.0'
 
+    //Support to Vertx libraries.
+    implementation 'io.vertx:vertx-lang-scala_2.12:3.6.2'
+    implementation 'io.vertx:vertx-web-scala_2.12:3.6.2'
+    implementation 'io.vertx:vertx-web-client-scala_2.12:3.6.2'
+
+    // JSON4S Json Library
+    compile group: 'org.json4s', name: 'json4s-native_2.12', version: '3.6.0'
+    compile group: 'org.json4s', name: 'json4s-jackson_2.12', version: '3.6.0'
 
     // https://mvnrepository.com/artifact/org.redisson/redisson
     compile group: 'org.redisson', name: 'redisson', version: '3.11.1'
