--- a/factory-linker-event-emitter/build.gradle
+++ b/factory-linker-event-emitter/build.gradle
@@ -2,8 +2,10 @@
 
 plugins {
     id 'scala'
+    id 'application'
 }
 
+mainClassName = 'scala.Main'
 
 dependencies {
     compile project(':commons')
