--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     compile group: 'org.json4s', name: 'json4s-native_2.12', version: '3.6.0'
     compile group: 'org.json4s', name: 'json4s-jackson_2.12', version: '3.6.0'
 
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.0'
+
     // https://mvnrepository.com/artifact/org.redisson/redisson
     compile group: 'org.redisson', name: 'redisson', version: '3.11.1'
 
