--- a/factory-linker-updater/build.gradle
+++ b/factory-linker-updater/build.gradle
@@ -6,8 +6,12 @@ plugins {
 
 
 dependencies {
+    compile project(':commons')
     // Use Scala 2.12 in our library project
     implementation 'org.scala-lang:scala-library:2.12.7'
+
+    // https://mvnrepository.com/artifact/io.socket/socket.io-client
+    compile group: 'io.socket', name: 'socket.io-client', version: '1.0.0'
 
     // Use Scalatest for testing our library
     testImplementation 'junit:junit:4.12'
