--- a/factory-linker-updater/build.gradle
+++ b/factory-linker-updater/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     // https://mvnrepository.com/artifact/io.socket/socket.io-client
     compile group: 'io.socket', name: 'socket.io-client', version: '1.0.0'
 
+    compile group: 'javax.websocket', name: 'javax.websocket-api', version: '1.1'
+
+
     // Use Scalatest for testing our library
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.scalatest:scalatest_2.12:3.0.5'
